--- a/1.html
+++ b/1.html
@@ -104,8 +104,8 @@
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2uIx-58vV_cKQL3BAyioi2-2DD7PNZn6isw&usqp=CAU" alt="ROV">
                     <h3>ROV</h3>
                     <p>บริการซื้อขาย ID เกมROV</p>
-                    <p>ราคา: $10</p>
-                    <button>หยิบใส่ตะกร้า</button>
+                    <p>ราคาเริ่มต้น 50บาท</p>
+                    <button>กดเพื่อดูรายระเอียดการบิการ</button>
                 </div>
                 <div class="item">
                     <img src="https://media.tenor.com/HO1YAH0_iMcAAAAi/roblox-logo.gif" alt="ROBLOX">
