--- a/1.html
+++ b/1.html
@@ -36,7 +36,7 @@
             <li><a href="#home">หน้าแรก</a></li>
             <li><a href="#products">สินค้า</a></li>
             <li><a href="#about">เกี่ยวกับเรา</a></li>
-            <li><a href="#contact">ติดต่อเรา</a></li>
+            <li><a href="#contact">ติดต่อ</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -50,16 +50,16 @@
                 <div class="item">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2uIx-58vV_cKQL3BAyioi2-2DD7PNZn6isw&usqp=CAU" alt="ROV">
                     <h3>ROV</h3>
-                    <p>บริการซื้อขาย ID เกมROV</p>
+                    <p>บริการซื้อขาย ID/ขึ้นแรงค์ เกมROV</p>
                     <p>ราคาเริ่มต้น 50บาท</p>
                     <button>กดเพื่อดูรายระเอียดการบิการ</button>
                 </div>
                 <div class="item">
                     <img src="https://media.tenor.com/HO1YAH0_iMcAAAAi/roblox-logo.gif" alt="ROBLOX">
                     <h3>ROBLOX</h3>
-                    <p>รายละเอียดสินค้า 2</p>
-                    <p>ราคา: $15</p>
-                    <button>หยิบใส่ตะกร้า</button>
+                    <p>บริการซื้อขาย ID/Item เกม Roblox</p>
+                    <p>ราคาเริ่มต้น 10บาท</p>
+                    <button>กดเพื่อดูรายระเอียดการบิการ</button>
                 </div>
                 <!-- เพิ่มไอเท็มเพิ่มเติมตามต้องการ -->
             </div>
